Bank-App-K8s/local-k8s-bank/bank-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-api-deployment
spec:
  selector:
    matchLabels:
      app: bank-api
  template:
    metadata:
      labels:
        app: bank-api
    spec:
      containers:
      - name: bank-api
        image: anandageethan/bank-api:localhost
        ports:
        - containerPort: 8080
