Bank-App-K8s/local-k8s-bank/bank-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-ui-deployment
spec:
  selector:
    matchLabels:
      app: bank-ui
  template:
    metadata:
      labels:
        app: bank-ui
    spec:
      containers:
      - name: myapp
        image: anandageethan/bank-ui:localhost
        ports:
        - containerPort: 80
