Bank-App-K8s/local-k8s-bank/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-sql-deployment
spec:
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql
        ports:
        - containerPort: 3306
        volumeMounts:
          - name: mysql-storage
            mountPath: '/var/lib/mysql'
            subPath: 'mysql'
      volumes:                                   
        - name: mysql-storage
          persistentVolumeClaim: 
            claimName: mysql-pvc
