Bank-App-K8s/local-k8s-bank/bank-ui-cluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bank-ui-cluster-service
spec:
  selector:
    app: bank-ui
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
