Bank-App-K8s/local-k8s-bank/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: "/?(.*)"
        pathType: ImplementationSpecific
        backend:
          service:
            name: bank-ui-cluster-service
            port:
              number: 80
      
      - path: "/api/?(.*)"
        pathType: ImplementationSpecific
        backend:
          service:
            name: bank-api-cluster-service
            port:
              number: 8080
